second commit of cv.css

--- a/cv.css
+++ b/cv.css
@@ -7,11 +7,11 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
+    font-family: "Arial", sans-serif;
 }
 body
 {
-    background-color:lightcyan;
+    background-color:yellow;
 }
 main
 {
